<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>no.bekk.bekkopen</groupId>
	<artifactId>nocommons</artifactId>
	<packaging>jar</packaging>
	<version>0-SNAPSHOT</version>
	<name>NoCommons</name>
	<url>http://bekkopen.github.com/NoCommons/</url>
	<description>
		The NoCommons library is a collection of helper classes for manipulation and validation of data specific to
		Norway and Norwegian citizens.
	</description>

	<licenses>
		<license>
			<name>The Apache Software License, Version 2.0</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
			<distribution>repo</distribution>
		</license>
	</licenses>

	<scm>
		<connection>scm:git:git@github.com:bekkopen/NoCommons.git</connection>
		<developerConnection>scm:git:git@github.com:bekkopen/NoCommons.git</developerConnection>
		<url>scm:git:git@github.com:bekkopen/NoCommons.git</url>
	</scm>

	<organization>
		<name>BEKK open source</name>
		<url>http://github.com/bekkopen</url>
	</organization>

	<developers>
		<developer>
			<id>pekrimen</id>
			<name>Per Mengshoel</name>
			<email>per.kristian.mengshoel (AT) BEKK.no</email>
			<roles>
				<role>Project manager</role>
				<role>Architect</role>
			</roles>
			<organization>BEKK</organization>
			<timezone>+1</timezone>
		</developer>
		<developer>
			<id>nesvold</id>
			<name>Håvard Nesvold</name>
			<email>haavard.nesvold (AT) BEKK.no</email>
			<roles>
				<role>Developer</role>
			</roles>
			<organization>BEKK</organization>
			<timezone>+1</timezone>
		</developer>
		<developer>
			<id>eivindw</id>
			<name>Eivind Waaler</name>
			<email>eivind.waaler (AT) BEKK.no</email>
			<roles>
				<role>Developer</role>
			</roles>
			<organization>BEKK</organization>
			<timezone>+1</timezone>
		</developer>
		<developer>
			<id>landro</id>
			<name>Stefan Magnus Landrø</name>
			<email>stefan.landro (AT) BEKK.no</email>
			<roles>
				<role>Developer</role>
			</roles>
			<organization>BEKK</organization>
			<timezone>+1</timezone>
		</developer>
		<developer>
			<id>judoole</id>
			<name>Ole Christian Langfjæran</name>
			<email>ole.langfjaran (AT) BEKK.no</email>
			<roles>
				<role>Developer</role>
			</roles>
			<organization>BEKK</organization>
			<timezone>+1</timezone>
		</developer>
		<developer>
			<id>steinim</id>
			<name>Stein Inge Morisbak</name>
			<email>stein.inge.morisbak (AT) BEKK.no</email>
			<roles>
				<role>Developer</role>
			</roles>
			<organization>BEKK</organization>
			<timezone>+1</timezone>
		</developer>
		<developer>
			<id>eivinhb</id>
			<name>Eivind Bergstøl</name>
			<email>eivind.bergstol (AT) BEKK.no</email>
			<roles>
				<role>Developer</role>
			</roles>
			<organization>BEKK</organization>
			<timezone>+1</timezone>
		</developer>
	</developers>

  <dependencies>
    <dependency>
      <groupId>javax.validation</groupId>
      <artifactId>validation-api</artifactId>
      <version>2.0.1.Final</version>
    </dependency>

    <!-- Test -->
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-api</artifactId>
      <version>5.8.2</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.hamcrest</groupId>
      <artifactId>hamcrest</artifactId>
      <version>2.2</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.hibernate.validator</groupId>
      <artifactId>hibernate-validator</artifactId>
      <version>6.2.2.Final</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>javax.el</groupId>
      <artifactId>javax.el-api</artifactId>
      <version>3.0.0</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.glassfish.web</groupId>
      <artifactId>javax.el</artifactId>
      <version>2.2.6</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>3.0.0-M5</version>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <version>3.2.0</version>
        <configuration>
          <archive>
            <manifestEntries>
              <Automatic-Module-Name>no.bekk.nocommons</Automatic-Module-Name>
            </manifestEntries>
          </archive>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.sonatype.plugins</groupId>
        <artifactId>nexus-staging-maven-plugin</artifactId>
        <version>1.6.8</version>
        <extensions>true</extensions>
        <configuration>
          <serverId>ossrh</serverId>
          <nexusUrl>https://oss.sonatype.org/</nexusUrl>
          <autoReleaseAfterClose>true</autoReleaseAfterClose>
        </configuration>
      </plugin>
    </plugins>
  </build>

  <profiles>
    <!-- Deployment profile (required so these plugins are only used when deploying) -->
    <profile>
      <id>deploy</id>
      <build>
        <plugins>
          <!-- Source plugin -->
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-source-plugin</artifactId>
            <version>2.4</version>
            <executions>
              <execution>
                <id>attach-sources</id>
                <goals>
                  <goal>jar-no-fork</goal>
                </goals>
              </execution>
            </executions>
          </plugin>

          <!-- Javadoc plugin -->
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-javadoc-plugin</artifactId>
            <version>2.10.4</version>
            <executions>
              <execution>
                <id>attach-javadocs</id>
                <goals>
                  <goal>jar</goal>
                </goals>
              </execution>
            </executions>
          </plugin>

          <!-- GPG plugin -->
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-gpg-plugin</artifactId>
            <version>1.6</version>
            <executions>
              <execution>
                <id>sign-artifacts</id>
                <phase>verify</phase>
                <goals>
                  <goal>sign</goal>
                </goals>
                <configuration>
                  <!-- Prevent `gpg` from using pinentry programs -->
                  <gpgArguments>
                    <arg>--pinentry-mode</arg>
                    <arg>loopback</arg>
                  </gpgArguments>
                </configuration>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>

  <properties>
    <!-- Dependency version -->
    <maven.compiler.source>11</maven.compiler.source>
    <maven.compiler.target>11</maven.compiler.target>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <distributionManagement>
    <!-- Central Repository -->
    <snapshotRepository>
      <id>ossrh</id>
      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
    </snapshotRepository>
  </distributionManagement>
</project>
